--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,11 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 odfpy==1.4.0
 openpyxl==2.6.0
-Pillow
+Pillow==7.1.0
 pycodestyle==2.5.0
 pylint==2.2.2
 pytz==2018.9
-PyYAML
+PyYAML==5.1
 six==1.12.0
 tablib==0.12.1
 unicodecsv==0.14.1
